ensure block width fits inside android / iphone as well as text wraps (#1337)

--- a/express/blocks/how-to-steps-carousel/how-to-steps-carousel.css
+++ b/express/blocks/how-to-steps-carousel/how-to-steps-carousel.css
@@ -11,10 +11,8 @@ main .how-to-steps-carousel-container > picture > img {
 main .how-to-steps-carousel-container > div {
   background-color: var(--color-gray-100);
   border-radius: 40px;
-
   margin: 0 24px;
   padding: 56px 24px;
-  width: 100%;
   max-width: fit-content;
 }
 
